fix: video overlay on firefox browser

--- a/src/scss/custom/_accept-overlay.scss
+++ b/src/scss/custom/_accept-overlay.scss
@@ -2,7 +2,7 @@
 
 .acceptoverlayable {
   position: relative;
-  &:has(.acceptoverlay.show) {
+  &.show {
     min-height: 450px;
   }
 }
